--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,222 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.btn {
+  margin: "10px";
+  padding: "10px 20px";
+  background-color: "#007bff";
+  color: "white";
+  border: "none";
+  border-radius: "5px";
+  cursor: "pointer";
+}
+
+.heading {
+  text-align: center;
+  align-self: flex-start;
+  margin-bottom: 0;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+.controlsContainer {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-bottom: 16px;
+}
+.videos {
+  position: relative;
+  height: inherit;
+  width: 100%;
+  margin: auto;
+  align-self: flex-start;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(440px, 1fr));
+  justify-items: center;
+  align-items: center;
+  border-radius: 45px;
+}
+
+.vid {
+  position: relative;
+  /* // background-color: black; */
+  height: inherit;
+  width: 100%;
+
+  /* // border-radius: 300px !important; */
+  div {
+    border-radius: 30px;
+    border: 0px;
+  }
+
+  /* // margin-top: 60px; */
+}
+
+.vidx {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 120px;
+  width: 170px;
+  border-radius: 25px;
+  border-radius: 25px;
+  margin-right: 12px;
+  margin-bottom: 24px;
+
+  /* // background-color: black;
+  // height: inherit;
+  // width: 100%;
+  // border-radius: 300px !important; */
+  div {
+    border-radius: 25px;
+
+    border-radius: 25px;
+    border: solid black 5px;
+  }
+
+  /* // margin-top: 60px; */
+}
+
+.controls {
+  /* // position: absolute;
+  // bottom: -85px;
+  left: 50%;
+  // transform: translateX(-50%);
+  // margin: -20px auto; */
+  display: grid;
+  grid-template-columns: repeat(3, 33%);
+  align-items: center;
+  justify-items: center;
+  z-index: 1;
+  width: 500px;
+  max-width: 60vw;
+}
+
+.controls p {
+  padding: 10px;
+  cursor: pointer;
+  background: #38373a;
+  color: #f7f7f7;
+  border-width: 1px;
+  border-color: #f7f7f7;
+  border-style: solid;
+}
+
+.controls p.on {
+  background: #f7f7f7;
+  color: #38373a;
+  border-width: 1px;
+  border-color: #38373a;
+  border-style: solid;
+}
+
+.join {
+  position: absolute;
+  z-index: 1;
+  width: 30vw;
+  height: fit-content;
+  height: max-content;
+  top: 50vh;
+  left: 50vw;
+  transform: translate(-50%, -50%);
+  width: 500px;
+  max-width: 75vw;
+}
+
+.join input {
+  padding: 15px;
+  font-size: 1rem;
+  border-width: 1px;
+  border-color: #38373a;
+  border-style: solid;
+  width: 80%;
+  display: block;
+  margin: 50px auto;
+}
+
+.join button {
+  min-width: 200px;
+  padding: 12px 0;
+  text-align: center;
+  background-color: #38373a;
+  color: #f7f7f7;
+  border-width: 1px;
+  border-color: #f7f7f7;
+  border-style: solid;
+  font-size: 1rem;
+  font-weight: 400;
+  cursor: pointer;
+  display: block;
+  margin: 0 auto;
+}
+
+.bottomRowButtons {
+  display: flex;
+  justify-content: center;
+  gap: 12px;
+  margin-top: 12px;
+}
+
+.actionButton {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 12px;
+}
+
+.actionIcon {
+  font-size: 24px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  /* // padding: 12px; */
+}
+
+.endCallButton {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  background-color: #efc1c2;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 12px;
+}
+
+.phoneIcon {
+  font-size: 24px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  color: red;
+  fill: #ea2122;
+  /* // background-color: red;
+  // padding: 12px; */
+}
+
+#agora-video-player-track-cam-b6ebdc16 {
+  border-radius: 340px;
 }
